<resources>
    <string name="app_name">Follow App</string>
    <string name="user_name">User name</string>
    <string name="user_phone">User Phone</string>
    <string name="etName">Name</string>
    <string name="signup">Signup</string>
    <string name="etPhone">Phone</string>
    <string name="etPassword">Password</string>
    <string name="login">Login</string>
    <string name="login_txt">Login user...</string>
    <string name="network_txt">Network Error!</string>
    <string name="signup_txt">Signing up...</string>
    <string name="linktosignup">Don\'t have account?Signup now!</string>
    <string name="user_doesnt_txt">You \'re not a user!</string>
    <string name="logout">Logout</string>
    <string name="user_already_exist_txt">User already exists!</string>
    <string name="report_size">No.of Reports:</string>
    <string name="light_txt">Light</string>
    <string name="accelerometer_txt">Accelerometer</string>
    <string name="speed_txt">Speed</string>
    <string name="noise_txt">Noise</string>
    <string name="location_txt">Location</string>
    <string name="getting_light_txt">Downloading data...</string>
    <string name="report_value">Value:</string>
    <string name="dateText_txt">Date:</string>
    <string name="report_txt">Reports</string>
    <string name="following_follower_txt">Following-Followers</string>
    <string name="notification_txt">Notifications</string>
    <string name="no_data_txt">No data!</string>
    <string name="follower_txt">Followers</string>
    <string name="following_txt">Following</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Allow this app to use your location?</string>
    <string name="ok">Ok</string>
    <string name="delete_txt">Deleting...</string>
    <string name="deletedSuccefully_txt">Deleted Successfully!</string>
    <string name="deletefailed_txt">Failed</string>
    <string name="add_follower">Add Follower</string>
    <string name="Enter_follower_number">Follower number</string>
    <string name="gps_network_not_enabled">Gps Not Enabled!</string>
    <string name="open_location_settings">Open</string>
    <string name="Cancel">Cancel</string>
</resources>
