<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityBackground">


        <RelativeLayout
            android:id="@+id/rlInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_profile" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/ll_profile_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFollowinName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/user_name"
                    android:textSize="@dimen/textview_font_size" />

                <TextView
                    android:id="@+id/tvFollowingPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/user_phone"
                    android:textSize="@dimen/textview_font_size" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlInfo"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/llLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/card_shape">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnailLight"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_light" />

                    <TextView
                        android:id="@+id/lightName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/thumbnailLight"
                        android:layout_toRightOf="@id/thumbnailLight"
                        android:text="@string/light_txt"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />

                    <TextView
                        android:id="@+id/reportLightSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lightName"
                        android:layout_toEndOf="@id/thumbnailLight"
                        android:layout_toRightOf="@id/thumbnailLight"
                        android:text="@string/report_size"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llLight"
                android:layout_margin="10dp"
                android:background="@drawable/card_shape">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnailSpeed"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_speed" />

                    <TextView
                        android:id="@+id/speedName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/thumbnailSpeed"
                        android:layout_toRightOf="@id/thumbnailSpeed"
                        android:text="@string/speed_txt"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />

                    <TextView
                        android:id="@+id/reportSpeedSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/speedName"
                        android:layout_toEndOf="@id/thumbnailSpeed"
                        android:layout_toRightOf="@id/thumbnailSpeed"
                        android:text="@string/report_size"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/llNoise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSpeed"
                android:layout_margin="10dp"
                android:background="@drawable/card_shape">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnailNoise"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_noise" />

                    <TextView
                        android:id="@+id/noiseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/thumbnailNoise"
                        android:layout_toRightOf="@id/thumbnailNoise"
                        android:text="@string/noise_txt"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />

                    <TextView
                        android:id="@+id/reportNoiseSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/noiseName"
                        android:layout_toEndOf="@id/thumbnailNoise"
                        android:layout_toRightOf="@id/thumbnailNoise"
                        android:text="@string/report_size"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAccelerometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNoise"
                android:layout_margin="10dp"
                android:background="@drawable/card_shape">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnailAccelerometer"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_accelerometer" />

                    <TextView
                        android:id="@+id/accelerometerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/thumbnailAccelerometer"
                        android:layout_toRightOf="@id/thumbnailAccelerometer"
                        android:text="@string/accelerometer_txt"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />

                    <TextView
                        android:id="@+id/reportAccelerometerSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/accelerometerName"
                        android:layout_toEndOf="@id/thumbnailAccelerometer"
                        android:layout_toRightOf="@id/thumbnailAccelerometer"
                        android:text="@string/report_size"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAccelerometer"
                android:layout_margin="10dp"
                android:background="@drawable/card_shape">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnailLocation"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_placeholder" />

                    <TextView
                        android:id="@+id/locationName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/thumbnailLocation"
                        android:layout_toRightOf="@id/thumbnailLocation"
                        android:text="@string/location_txt"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />

                    <TextView
                        android:id="@+id/reportSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationName"
                        android:layout_toEndOf="@id/thumbnailLocation"
                        android:layout_toRightOf="@id/thumbnailLocation"
                        android:text="@string/report_size"
                        android:textColor="@color/secondColor"
                        android:textSize="@dimen/textview_font_size" />


                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
