<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".signuputil.SignupActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <ImageView
                android:id="@+id/ivUserSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_profile" />


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivUserSignup"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/black_stroke"
                android:gravity="start|left"
                android:hint="@string/etName"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_font_size" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_stroke"
                android:gravity="start|left"
                android:hint="@string/etPhone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_font_size" />

            <!--<EditText-->
            <!--android:id="@+id/etPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/etPhone"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginEnd="40dp"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginRight="40dp"-->
            <!--android:layout_marginStart="40dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/black_stroke"-->
            <!--android:gravity="start"-->
            <!--android:hint="@string/etPassword"-->
            <!--android:inputType="text"-->
            <!--android:padding="10dp"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="@dimen/textview_font_size" />-->

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhone"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/corner_button"
                android:padding="10dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textview_font_size" />


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>